--- a/python/myblog/naf_blog/templates/layout.html
+++ b/python/myblog/naf_blog/templates/layout.html
@@ -32,6 +32,7 @@
             <!-- Navbar Right Side | jinga 2 conditional has been added -->
             <div class="navbar-nav">
             {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
                 <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
             {% else %}
